Projelerin README dosyalarını ayırdım.

--- a/Grid1/Grid1.csproj
+++ b/Grid1/Grid1.csproj
@@ -7,4 +7,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Resimler\**" />
+    <EmbeddedResource Remove="Resimler\**" />
+    <None Remove="Resimler\**" />
+    <Page Remove="Resimler\**" />
+  </ItemGroup>
+
 </Project>
